레이아웃 수정 및 포폴 업데이트

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
       <nav class="inner">
         <ul class="gnb float-area">
           <li class="active">
-            <a href="#Home">Home</a>
+            <a href="#Home">HOME</a>
           </li>
           <li>
-            <a href="#AboutMe">About me</a>
+            <a href="#AboutMe">ABOUT ME</a>
           </li>
           <li>
-            <a href="#Portfoilo">Portfolio</a>
+            <a href="#Portfoilo">PORTFOLIO</a>
           </li>
           <li>
-            <a href="#Contact">Contact</a>
+            <a href="#Contact">CONTACT</a>
           </li>
         </ul>
       </nav>
@@ -56,16 +56,16 @@
 
       <ul class="mobile-gnb">
         <li class="active">
-          <a href="#Home">Home</a>
+          <a href="#Home">HOME</a>
         </li>
         <li>
-          <a href="#AboutMe">About me</a>
+          <a href="#AboutMe">ABOUT ME</a>
         </li>
         <li>
-          <a href="#Portfoilo">Portfolio</a>
+          <a href="#Portfoilo">PORTFOLIO</a>
         </li>
         <li>
-          <a href="#Contact">Contact</a>
+          <a href="#Contact">CONTACT</a>
         </li>
       </ul>
     </nav>
@@ -89,15 +89,17 @@
       <section class="section aboutme" id="section1">
         <div class="inner">
           <div class="title-box">
-            <strong>
-              <span># Web Publisher</span>
-              <span class="point"># Kim Hyun Jung</span>
-              저에 대해 <br>소개할게요!
-            </strong>
-
-            <a href="https://apricot-composer-e98.notion.site/RESUME-9ccb43f375e840e2b6080f5aee6763f7" target="_blank"
-              class="btn-resume btn-line">이력서 (링크)</a>
+            <img src="./images/aboutme.png" alt="소개 이미지">
+            <div class="text-area">
+              <strong class="title">
+                저에 대해 <br>소개할게요!
+              </strong>
+              <span class="tag">#웹퍼블리셔</span>
+              <span class="tag">#꼼꼼함</span>
+              <span class="tag">#원활한 의사소통</span>
+            </div>
           </div>
+
           <div class="contents-box">
             <ul>
               <li>
@@ -130,6 +132,11 @@
               </li>
             </ul>
           </div>
+
+          <div class="btn-area">
+            <a href="https://apricot-composer-e98.notion.site/RESUME-9ccb43f375e840e2b6080f5aee6763f7" target="_blank"
+            class="btn-resume btn-line">이력서 (링크)</a>
+          </div>
         </div>
       </section>
       <!-- // About me -->
@@ -138,58 +145,60 @@
       <section class="section portfoilo" id="section2">
         <div class="inner">
 
-          <!-- portfoilo 1 : SKT Direct Shop 유선 고도화 프로젝트 -->
+          <!-- T월드 앱 콘텐츠 제작 -->
           <div class="portfoilo-item float-area">
-            <div class="txt-box left-box">
+            <div class="txt-box">
               <div class="tit-area">
                 <i class="num">01</i>
                 <strong class="tit">
-                  <span class="category">Adaptive Website</span>
-                  SKT Direct Shop 유선 고도화 프로젝트
+                  <span class="category">App</span>
+                  T월드 App 콘텐츠 제작
                 </strong>
               </div>
 
               <dl>
                 <dt>Project</dt>
-                <dd>SKT Direct Shop 유선 페이지 신규 구축</dd>
+                <dd>T월드 App T타임 콘텐츠 제작</dd>
                 <dt>Skill</dt>
-                <dd>HTML5, SCSS, jQuery</dd>
+                <dd>HTML, SCSS, Javascript, React, TypeScript</dd>
                 <dt>Detail</dt>
                 <dd>
-                  SKT Direct Shop에 새롭게 추가된 IPTV/인터넷 메뉴에 대한 <br>
-                  메인, 상품, 장바구니, 주문 프로세스 페이지들을 신규 구축하였습니다.
+                  T월드 App T타임 콘텐츠 마크업 개발을 하였습니다. <br>
+                  React / TypeScript 환경에서 UI 컴포넌트 작업을 하였으며 <br>
+                  UI 컴포넌트 관리를 위해 Storybook을 활용하여 재사용성을 높였습니다.
+                </dd>
               </dl>
 
-              <a href="https://www.notion.so/SKT-687ac6fe2bdf4260ba1e1e16e50fca69" target="_blank"
+              <a href="https://apricot-composer-e98.notion.site/T-687ac6fe2bdf4260ba1e1e16e50fca69" target="_blank"
                 class="btn-process btn-line">작업 과정 보기</a>
             </div>
-            <div class="img-box right-box">
-              <figure class="img wireline">
-                <figcaption class="skip">SKT Direct Shop 유선 고도화 페이지</figcaption>
+            <div class="img-box">
+              <figure class="img tworld">
+                <figcaption class="skip">T월드 앱 T타임 페이지</figcaption>
               </figure>
             </div>
           </div>
-          <!-- // portfoilo 1 : SKT Direct Shop 유선 고도화 프로젝트 -->
+          <!-- // T월드 앱 콘텐츠 제작 -->
 
-          <!-- portfoilo 2 : SKT Direct Shop eSIM 고도화 프로젝트 -->
+          <!-- T다이렉트샵 eSIM 고도화 -->
           <div class="portfoilo-item float-area">
-            <div class="txt-box right-box">
+            <div class="txt-box">
               <div class="tit-area">
                 <i class="num">02</i>
                 <strong class="tit">
-                  <span class="category">Adaptive Website</span>
-                  SKT Direct Shop eSIM 고도화 프로젝트
+                  <span class="category">Adaptive Web</span>
+                  T다이렉트샵 eSIM 고도화
                 </strong>
               </div>
 
               <dl>
                 <dt>Project</dt>
-                <dd>SKT Direct Shop eSIM 페이지 신규 구축</dd>
+                <dd>T다이렉트샵 eSIM 페이지 신규 구축</dd>
                 <dt>Skill</dt>
                 <dd>HTML5, SCSS, jQuery</dd>
                 <dt>Detail</dt>
                 <dd>
-                  SKT Direct Shop의 eSIM Magnolia / eSIM 삼성 ODA <br>
+                  T다이렉트샵의 eSIM Magnolia / eSIM 삼성 ODA <br>
                   단말 개통 프로세스 페이지들을 신규 구축하였습니다.<br>
                   더불어 eSIM 단말 개통 프로세스 페이지에 대한 유지 / 보수 작업도 함께 진행했습니다.
                 </dd>
@@ -198,122 +207,54 @@
               <a href="https://www.notion.so/SKT-eSIM-85eef98f047148bc96939b3d352d9e93" target="_blank"
                 class="btn-process btn-line">작업 과정 보기</a>
             </div>
-            <div class="img-box left-box">
+            <div class="img-box">
               <figure class="img esim">
-                <figcaption class="skip">SKT Direct Shop eSIM 고도화 페이지</figcaption>
+                <figcaption class="skip">T다이렉트샵 eSIM 고도화 페이지</figcaption>
               </figure>
             </div>
           </div>
-          <!-- // portfoilo 2 : SKT Direct Shop eSIM 고도화 프로젝트 -->
+          <!-- // T다이렉트샵 eSIM 고도화 -->
 
-          <!-- portfoilo 3 : 대림대학교 -->
+          <!-- T다이렉트샵 유선 고도화 -->
           <div class="portfoilo-item float-area">
-            <div class="txt-box left-box">
+            <div class="txt-box">
               <div class="tit-area">
                 <i class="num">03</i>
                 <strong class="tit">
-                  <span class="category">Responsive Website</span>
-                  대림대학교
+                  <span class="category">Adaptive Web</span>
+                  T다이렉트샵 유선 고도화
                 </strong>
               </div>
 
               <dl>
                 <dt>Project</dt>
-                <dd>대림대학교 사이트 전체 리뉴얼</dd>
+                <dd>T다이렉트샵 유선 (인터넷/B tv) 신규 구축</dd>
                 <dt>Skill</dt>
-                <dd>HTML5, CSS3, jQuery</dd>
+                <dd>HTML5, SCSS, jQuery</dd>
                 <dt>Detail</dt>
                 <dd>
-                  학과 및 학부와 관련된 다양한 안내 페이지들을 퍼블리싱 하였습니다. <br>
-                  모든 페이지들은 반응형으로 작업하여 사용자가 다양한 디바이스로 쉽게 접근할 수 있도록 하였습니다.
+                  T다이렉트샵에 새롭게 추가된 인터넷/B tv 메뉴에 대한 <br>
+                  메인, 상품, 장바구니, 주문 프로세스 페이지들을 신규 구축하였습니다.
               </dl>
 
-              <a href="https://apricot-composer-e98.notion.site/98587253d8f74712b0df0cfaf2fb9df4" target="_blank"
+              <a href="https://www.notion.so/SKT-687ac6fe2bdf4260ba1e1e16e50fca69" target="_blank"
                 class="btn-process btn-line">작업 과정 보기</a>
             </div>
-            <div class="img-box right-box">
-              <figure class="img daelim">
-                <figcaption class="skip">대림대학교</figcaption>
+            <div class="img-box">
+              <figure class="img wireline">
+                <figcaption class="skip">T다이렉트샵 유선 고도화 페이지</figcaption>
               </figure>
             </div>
           </div>
-          <!-- // portfoilo 3 : 대림대학교 -->
+          <!-- // T다이렉트샵 유선 고도화 -->
 
-          <!-- portfoilo 4 : 경기과학기술대학교 -->
-          <div class="portfoilo-item float-area">
-            <div class="txt-box right-box">
+           <!-- 고려사이버대학교 -->
+           <div class="portfoilo-item float-area">
+            <div class="txt-box">
               <div class="tit-area">
                 <i class="num">04</i>
                 <strong class="tit">
-                  <span class="category">Responsive Website</span>
-                  경기과학기술대학교
-                </strong>
-              </div>
-
-              <dl>
-                <dt>Project</dt>
-                <dd>경기과학기술대학교 사이트 전체 리뉴얼</dd>
-                <dt>Skill</dt>
-                <dd>HTML5, CSS3, jQuery</dd>
-                <dt>Detail</dt>
-                <dd>
-                  학사/전문학사 및 기관 소개, 시설 안내, 교육 프로그램 안내 등 <br>
-                  다양한 페이지들에 대한 퍼블리싱 작업을 반응형으로 진행하였습니다.
-                </dd>
-              </dl>
-
-              <a href="https://apricot-composer-e98.notion.site/8643395141594037af86008129c24125" target="_blank"
-                class="btn-process btn-line">작업 과정 보기</a>
-            </div>
-            <div class="img-box left-box">
-              <figure class="img gtec">
-                <figcaption class="skip">경기과학기술대학교</figcaption>
-              </figure>
-            </div>
-          </div>
-          <!-- // portfoilo 4 : 경기과학기술대학교 -->
-
-          <!-- portfoilo 5 : 인하대학교 멀티미디어북 -->
-          <div class="portfoilo-item float-area">
-            <div class="txt-box left-box">
-              <div class="tit-area">
-                <i class="num">05</i>
-                <strong class="tit">
-                  <span class="category">Responsive Website</span>
-                  인하대학교 멀티미디어북
-                </strong>
-              </div>
-
-              <dl>
-                <dt>Project</dt>
-                <dd>인하대학교 멀티미디어북 신규 구축</dd>
-                <dt>Skill</dt>
-                <dd>HTML5, CSS3, jQuery</dd>
-                <dt>Detail</dt>
-                <dd>
-                  전공안내 멀티미디어북 학과소개 페이지를 퍼블리싱 하였습니다. <br>
-                  간결하고 사용자의 접근성을 향상시키는 UI를 중점으로 작업을 진행하였습니다.
-                </dd>
-              </dl>
-
-              <a href="https://apricot-composer-e98.notion.site/fb7693010ea14adca7f3d5b7f00e9126" target="_blank"
-                class="btn-process btn-line">작업 과정 보기</a>
-            </div>
-            <div class="img-box right-box">
-              <figure class="img inha">
-                <figcaption class="skip">인하대학교</figcaption>
-              </figure>
-            </div>
-          </div>
-          <!-- // portfoilo 5 : 인하대학교 멀티미디어북 -->
-
-          <!-- portfoilo 6 : 고려사이버대학교 -->
-          <div class="portfoilo-item float-area">
-            <div class="txt-box right-box">
-              <div class="tit-area">
-                <i class="num">06</i>
-                <strong class="tit">
-                  <span class="category">Responsive Website</span>
+                  <span class="category">Responsive Web</span>
                   고려사이버대학교
                 </strong>
               </div>
@@ -333,25 +274,126 @@
               <a href="https://apricot-composer-e98.notion.site/8f1d88e61cb046d48fed2d28d20d77bc" target="_blank"
                 class="btn-process btn-line">작업 과정 보기</a>
             </div>
-            <div class="img-box left-box">
+            <div class="img-box">
               <figure class="img kca">
                 <figcaption class="skip">고려사이버대학교</figcaption>
               </figure>
             </div>
           </div>
-          <!-- // portfoilo 6 : 고려사이버대학교 -->
+          <!-- // 고려사이버대학교 -->
 
-          <div class="veiw-more-area">
-            <a href="https://www.notion.so/11e0f45009ab4499a9ba60a33853ef2f?v=8b67e93ebec5497a9236e1dd0cda61e0" target="_blank" class="btn-veiw-more btn-line">더 보기</a>
+          <!-- 인하대학교 멀티미디어북 -->
+          <div class="portfoilo-item float-area">
+            <div class="txt-box">
+              <div class="tit-area">
+                <i class="num">05</i>
+                <strong class="tit">
+                  <span class="category">Responsive Web</span>
+                  인하대학교 멀티미디어북
+                </strong>
+              </div>
+
+              <dl>
+                <dt>Project</dt>
+                <dd>인하대학교 멀티미디어북 신규 구축</dd>
+                <dt>Skill</dt>
+                <dd>HTML5, CSS3, jQuery</dd>
+                <dt>Detail</dt>
+                <dd>
+                  전공안내 멀티미디어북 학과소개 페이지를 퍼블리싱 하였습니다. <br>
+                  간결하고 사용자의 접근성을 향상시키는 UI를 중점으로 작업을 진행하였습니다.
+                </dd>
+              </dl>
+
+              <a href="https://apricot-composer-e98.notion.site/fb7693010ea14adca7f3d5b7f00e9126" target="_blank"
+                class="btn-process btn-line">작업 과정 보기</a>
+            </div>
+            <div class="img-box">
+              <figure class="img inha">
+                <figcaption class="skip">인하대학교</figcaption>
+              </figure>
+            </div>
           </div>
+          <!-- // 인하대학교 멀티미디어북 -->
 
-          <!-- portfoilo 7 : IKEA -->
-          <!-- <div class="portfoilo-item float-area">
-            <div class="txt-box left-box">
+          <!-- 경기과학기술대학교 -->
+          <div class="portfoilo-item float-area">
+            <div class="txt-box">
+              <div class="tit-area">
+                <i class="num">06</i>
+                <strong class="tit">
+                  <span class="category">Responsive Web</span>
+                  경기과학기술대학교
+                </strong>
+              </div>
+
+              <dl>
+                <dt>Project</dt>
+                <dd>경기과학기술대학교 사이트 전체 리뉴얼</dd>
+                <dt>Skill</dt>
+                <dd>HTML5, CSS3, jQuery</dd>
+                <dt>Detail</dt>
+                <dd>
+                  학사/전문학사 및 기관 소개, 시설 안내, 교육 프로그램 안내 등 <br>
+                  다양한 페이지들에 대한 퍼블리싱 작업을 반응형으로 진행하였습니다.
+                </dd>
+              </dl>
+
+              <a href="https://apricot-composer-e98.notion.site/8643395141594037af86008129c24125" target="_blank"
+                class="btn-process btn-line">작업 과정 보기</a>
+            </div>
+            <div class="img-box">
+              <figure class="img gtec">
+                <figcaption class="skip">경기과학기술대학교</figcaption>
+              </figure>
+            </div>
+          </div>
+          <!-- // 경기과학기술대학교 -->
+
+          <!-- 대림대학교 -->
+          <div class="portfoilo-item float-area">
+            <div class="txt-box">
               <div class="tit-area">
                 <i class="num">07</i>
                 <strong class="tit">
-                  <span class="category">Responsive Website</span>
+                  <span class="category">Responsive Web</span>
+                  대림대학교
+                </strong>
+              </div>
+
+              <dl>
+                <dt>Project</dt>
+                <dd>대림대학교 사이트 전체 리뉴얼</dd>
+                <dt>Skill</dt>
+                <dd>HTML5, CSS3, jQuery</dd>
+                <dt>Detail</dt>
+                <dd>
+                  학과 및 학부와 관련된 다양한 안내 페이지들을 퍼블리싱 하였습니다. <br>
+                  모든 페이지들은 반응형으로 작업하여 사용자가 다양한 디바이스로 쉽게 접근할 수 있도록 하였습니다.
+              </dl>
+
+              <a href="https://apricot-composer-e98.notion.site/98587253d8f74712b0df0cfaf2fb9df4" target="_blank"
+                class="btn-process btn-line">작업 과정 보기</a>
+            </div>
+            <div class="img-box">
+              <figure class="img daelim">
+                <figcaption class="skip">대림대학교</figcaption>
+              </figure>
+            </div>
+          </div>
+          <!-- // 대림대학교 -->
+
+          <div class="btn-area">
+            <a href="https://www.notion.so/11e0f45009ab4499a9ba60a33853ef2f?v=8b67e93ebec5497a9236e1dd0cda61e0" target="_blank" class="btn-veiw-more btn-line">더 보기</a>
+          </div>
+
+          <!-- IKEA -->
+          <!-- <div class="portfoilo-item float-area">
+            <div class="txt-box">
+              <div class="tit-area">
+                <i class="num">08</i>
+                <strong class="tit">
+                  <span class="category">Responsive Web</span>
                   IKEA
                 </strong>
               </div>
@@ -371,21 +413,21 @@
               <a href="https://apricot-composer-e98.notion.site/IKEA-c4e3115b4d6a485b80527a8b8cf38eea" target="_blank"
                 class="btn-process btn-line">작업 과정 보기</a>
             </div>
-            <div class="img-box right-box">
+            <div class="img-box">
               <figure class="img ikea">
                 <figcaption class="skip">이케아</figcaption>
               </figure>
             </div>
           </div> -->
-          <!-- // portfoilo 7 : IKEA -->
+          <!-- // IKEA -->
 
-          <!-- portfoilo 8 : Zoo Coffee -->
+          <!-- Zoo Coffee -->
           <!-- <div class="portfoilo-item float-area">
-            <div class="txt-box right-box">
+            <div class="txt-box">
               <div class="tit-area">
-                <i class="num">08</i>
+                <i class="num">09</i>
                 <strong class="tit">
-                  <span class="category">Adaptive Website</span>
+                  <span class="category">Adaptive Web</span>
                   Zoo Coffee
                 </strong>
               </div>
@@ -405,13 +447,13 @@
               <a href="https://apricot-composer-e98.notion.site/Zoo-Coffee-22c045baa9a34d31b99f479193bff019"
                 target="_blank" class="btn-process btn-line">작업 과정 보기</a>
             </div>
-            <div class="img-box left-box">
+            <div class="img-box">
               <figure class="img zooCoffee">
                 <figcaption class="skip">주커피</figcaption>
               </figure>
             </div>
           </div> -->
-          <!-- // portfoilo 8 : Zoo Coffee -->
+          <!-- // Zoo Coffee -->
         </div>
       </section>
       <!-- // Portfolio -->
